[OTHER]: Downgrading java.util.List api method